--- a/backend/shophop/requirements.txt
+++ b/backend/shophop/requirements.txt
@@ -1,3 +1,7 @@
 Django>=4.0,<5.0
+django-allauth==65.3.0
+djangorestframework==3.15.2
+jwt==1.3.1
 psycopg2-binary>=2.9
 python-dotenv>=0.19
+requests==2.32.3
