--- a/backend/shophop/requirements.txt
+++ b/backend/shophop/requirements.txt
@@ -1,16 +1,16 @@
-beautifulsoup4
-pandas
-django_crontab==0.7.1
 asgiref==3.8.1
+beautifulsoup4==4.12.3
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
 cryptography==44.0.0
 Django==4.2.16
 django-cors-headers==4.6.0
+django_crontab==0.7.1
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 idna==3.10
+pandas==2.2.3
 psycopg2-binary==2.9.10
 pycparser==2.22
 PyJWT==2.10.1
