Integrate chrome extension with websites

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -3,8 +3,18 @@
     "name": "ShopHop",
     "description": "Base Level Extension",
     "version": "1.0",
+    "content_scripts": [{
+        "matches": ["<all_urls>"],
+        "js": ["tracker.js"],
+        "run_at": "document_start"
+      }
+    ],
+    "permissions": ["activeTab"],
+    "background": {
+      "service_worker": "background.js"
+    },
     "action": {
-      "default_popup": "hello.html",
+      "default_popup": "popup.html",
       "default_icon": "shophop.png"
     }
-  }
+}
