--- a/frontend/requirements.txt
+++ b/frontend/requirements.txt
@@ -27,6 +27,7 @@ pyarrow==18.0.0
 pydeck==0.9.1
 Pygments==2.18.0
 PyJWT==2.9.0
+pytest==8.3.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
